# Algo1TPI

./: CMakeLists.txt  README.md
ayy/: CMakeLists.txt  Funciones_TPI.cpp  definiciones.h  ejercicios.h  solucion.cpp
ayy/tests/: ardillizarTEST.cpp  encontrarAparicionTEST.cpp  silenciosTEST.cpp
src/: .gitignore  CMakeLists.txt  Funciones_TPI.cpp  definiciones.h  ejercicios.h  funcionesAuxiliares.h  main.cpp  salaDeReunion  solucion.cpp
src/datos/: habla_spkr0.txt  habla_spkr1.txt  habla_spkr2.txt  habla_spkr3.txt  habla_spkr4.txt  habla_spkr5.txt  habla_spkrdefault.txt
src/tests/: ardillizarTEST.cpp  compararSilenciosTEST.cpp  distanciasTEST.cpp  elAcaparadorTEST.cpp  encontrarAparicionTEST.cpp  encontrarMejorUmbralTEST.cpp  flashElPerezosoTEST.cpp  grabacionValidaTEST.cpp  hayQuilombosTEST.cpp  pruebaAudioTEST.cpp  silenciosTEST.cpp  sinSilenciosTEST.cpp
