cmake_minimum_required(VERSION 3.8)
project(salaDeReuniones_TPI)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/.idea/misc.xml
        src/.idea/modules.xml
        src/.idea/src.iml
        src/.idea/workspace.xml
        src/datos/habla_spkr0.txt
        src/datos/habla_spkr1.txt
        src/datos/habla_spkr2.txt
        src/datos/habla_spkr3.txt
        src/datos/habla_spkr4.txt
        src/datos/habla_spkr5.txt
        src/datos/habla_spkrdefault.txt
        src/datos/pzm.dat
        src/datos/spkr0.dat
        src/datos/spkr1.dat
        src/datos/spkr2.dat
        src/datos/spkr3.dat
        src/datos/spkr4.dat
        src/datos/spkr5.dat
        src/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        src/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-matchers.h
        src/lib/googletest-master/googlemock/include/gmock/internal/custom/gmock-port.h
        src/lib/googletest-master/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        src/lib/googletest-master/googlemock/include/gmock/internal/gmock-internal-utils.h
        src/lib/googletest-master/googlemock/include/gmock/internal/gmock-port.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-actions.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-cardinalities.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-generated-actions.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-generated-function-mockers.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-generated-matchers.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-generated-nice-strict.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-matchers.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-more-actions.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-more-matchers.h
        src/lib/googletest-master/googlemock/include/gmock/gmock-spec-builders.h
        src/lib/googletest-master/googlemock/include/gmock/gmock.h
        src/lib/googletest-master/googlemock/src/gmock-all.cc
        src/lib/googletest-master/googlemock/src/gmock-cardinalities.cc
        src/lib/googletest-master/googlemock/src/gmock-internal-utils.cc
        src/lib/googletest-master/googlemock/src/gmock-matchers.cc
        src/lib/googletest-master/googlemock/src/gmock-spec-builders.cc
        src/lib/googletest-master/googlemock/src/gmock.cc
        src/lib/googletest-master/googlemock/src/gmock_main.cc
        src/lib/googletest-master/googlemock/test/gmock-actions_test.cc
        src/lib/googletest-master/googlemock/test/gmock-cardinalities_test.cc
        src/lib/googletest-master/googlemock/test/gmock-generated-actions_test.cc
        src/lib/googletest-master/googlemock/test/gmock-generated-function-mockers_test.cc
        src/lib/googletest-master/googlemock/test/gmock-generated-internal-utils_test.cc
        src/lib/googletest-master/googlemock/test/gmock-generated-matchers_test.cc
        src/lib/googletest-master/googlemock/test/gmock-internal-utils_test.cc
        src/lib/googletest-master/googlemock/test/gmock-matchers_test.cc
        src/lib/googletest-master/googlemock/test/gmock-more-actions_test.cc
        src/lib/googletest-master/googlemock/test/gmock-nice-strict_test.cc
        src/lib/googletest-master/googlemock/test/gmock-port_test.cc
        src/lib/googletest-master/googlemock/test/gmock-spec-builders_test.cc
        src/lib/googletest-master/googlemock/test/gmock_all_test.cc
        src/lib/googletest-master/googlemock/test/gmock_ex_test.cc
        src/lib/googletest-master/googlemock/test/gmock_leak_test_.cc
        src/lib/googletest-master/googlemock/test/gmock_link2_test.cc
        src/lib/googletest-master/googlemock/test/gmock_link_test.cc
        src/lib/googletest-master/googlemock/test/gmock_link_test.h
        src/lib/googletest-master/googlemock/test/gmock_output_test_.cc
        src/lib/googletest-master/googlemock/test/gmock_stress_test.cc
        src/lib/googletest-master/googlemock/test/gmock_test.cc
        src/lib/googletest-master/googletest/codegear/gtest_all.cc
        src/lib/googletest-master/googletest/codegear/gtest_link.cc
        src/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-port.h
        src/lib/googletest-master/googletest/include/gtest/internal/custom/gtest-printers.h
        src/lib/googletest-master/googletest/include/gtest/internal/custom/gtest.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-death-test-internal.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-filepath.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-internal.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-linked_ptr.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util-generated.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-param-util.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-port-arch.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-port.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-string.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-tuple.h
        src/lib/googletest-master/googletest/include/gtest/internal/gtest-type-util.h
        src/lib/googletest-master/googletest/include/gtest/gtest-death-test.h
        src/lib/googletest-master/googletest/include/gtest/gtest-message.h
        src/lib/googletest-master/googletest/include/gtest/gtest-param-test.h
        src/lib/googletest-master/googletest/include/gtest/gtest-printers.h
        src/lib/googletest-master/googletest/include/gtest/gtest-spi.h
        src/lib/googletest-master/googletest/include/gtest/gtest-test-part.h
        src/lib/googletest-master/googletest/include/gtest/gtest-typed-test.h
        src/lib/googletest-master/googletest/include/gtest/gtest.h
        src/lib/googletest-master/googletest/include/gtest/gtest_pred_impl.h
        src/lib/googletest-master/googletest/include/gtest/gtest_prod.h
        src/lib/googletest-master/googletest/samples/prime_tables.h
        src/lib/googletest-master/googletest/samples/sample1.cc
        src/lib/googletest-master/googletest/samples/sample1.h
        src/lib/googletest-master/googletest/samples/sample10_unittest.cc
        src/lib/googletest-master/googletest/samples/sample1_unittest.cc
        src/lib/googletest-master/googletest/samples/sample2.cc
        src/lib/googletest-master/googletest/samples/sample2.h
        src/lib/googletest-master/googletest/samples/sample2_unittest.cc
        src/lib/googletest-master/googletest/samples/sample3-inl.h
        src/lib/googletest-master/googletest/samples/sample3_unittest.cc
        src/lib/googletest-master/googletest/samples/sample4.cc
        src/lib/googletest-master/googletest/samples/sample4.h
        src/lib/googletest-master/googletest/samples/sample4_unittest.cc
        src/lib/googletest-master/googletest/samples/sample5_unittest.cc
        src/lib/googletest-master/googletest/samples/sample6_unittest.cc
        src/lib/googletest-master/googletest/samples/sample7_unittest.cc
        src/lib/googletest-master/googletest/samples/sample8_unittest.cc
        src/lib/googletest-master/googletest/samples/sample9_unittest.cc
        src/lib/googletest-master/googletest/src/gtest-all.cc
        src/lib/googletest-master/googletest/src/gtest-death-test.cc
        src/lib/googletest-master/googletest/src/gtest-filepath.cc
        src/lib/googletest-master/googletest/src/gtest-internal-inl.h
        src/lib/googletest-master/googletest/src/gtest-port.cc
        src/lib/googletest-master/googletest/src/gtest-printers.cc
        src/lib/googletest-master/googletest/src/gtest-test-part.cc
        src/lib/googletest-master/googletest/src/gtest-typed-test.cc
        src/lib/googletest-master/googletest/src/gtest.cc
        src/lib/googletest-master/googletest/src/gtest_main.cc
        src/lib/googletest-master/googletest/test/gtest-death-test_ex_test.cc
        src/lib/googletest-master/googletest/test/gtest-death-test_test.cc
        src/lib/googletest-master/googletest/test/gtest-filepath_test.cc
        src/lib/googletest-master/googletest/test/gtest-linked_ptr_test.cc
        src/lib/googletest-master/googletest/test/gtest-listener_test.cc
        src/lib/googletest-master/googletest/test/gtest-message_test.cc
        src/lib/googletest-master/googletest/test/gtest-options_test.cc
        src/lib/googletest-master/googletest/test/gtest-param-test2_test.cc
        src/lib/googletest-master/googletest/test/gtest-param-test_test.cc
        src/lib/googletest-master/googletest/test/gtest-param-test_test.h
        src/lib/googletest-master/googletest/test/gtest-port_test.cc
        src/lib/googletest-master/googletest/test/gtest-printers_test.cc
        src/lib/googletest-master/googletest/test/gtest-test-part_test.cc
        src/lib/googletest-master/googletest/test/gtest-tuple_test.cc
        src/lib/googletest-master/googletest/test/gtest-typed-test2_test.cc
        src/lib/googletest-master/googletest/test/gtest-typed-test_test.cc
        src/lib/googletest-master/googletest/test/gtest-typed-test_test.h
        src/lib/googletest-master/googletest/test/gtest-unittest-api_test.cc
        src/lib/googletest-master/googletest/test/gtest_all_test.cc
        src/lib/googletest-master/googletest/test/gtest_break_on_failure_unittest_.cc
        src/lib/googletest-master/googletest/test/gtest_catch_exceptions_test_.cc
        src/lib/googletest-master/googletest/test/gtest_color_test_.cc
        src/lib/googletest-master/googletest/test/gtest_env_var_test_.cc
        src/lib/googletest-master/googletest/test/gtest_environment_test.cc
        src/lib/googletest-master/googletest/test/gtest_filter_unittest_.cc
        src/lib/googletest-master/googletest/test/gtest_help_test_.cc
        src/lib/googletest-master/googletest/test/gtest_list_tests_unittest_.cc
        src/lib/googletest-master/googletest/test/gtest_main_unittest.cc
        src/lib/googletest-master/googletest/test/gtest_no_test_unittest.cc
        src/lib/googletest-master/googletest/test/gtest_output_test_.cc
        src/lib/googletest-master/googletest/test/gtest_pred_impl_unittest.cc
        src/lib/googletest-master/googletest/test/gtest_premature_exit_test.cc
        src/lib/googletest-master/googletest/test/gtest_prod_test.cc
        src/lib/googletest-master/googletest/test/gtest_repeat_test.cc
        src/lib/googletest-master/googletest/test/gtest_shuffle_test_.cc
        src/lib/googletest-master/googletest/test/gtest_sole_header_test.cc
        src/lib/googletest-master/googletest/test/gtest_stress_test.cc
        src/lib/googletest-master/googletest/test/gtest_throw_on_failure_ex_test.cc
        src/lib/googletest-master/googletest/test/gtest_throw_on_failure_test_.cc
        src/lib/googletest-master/googletest/test/gtest_uninitialized_test_.cc
        src/lib/googletest-master/googletest/test/gtest_unittest.cc
        src/lib/googletest-master/googletest/test/gtest_xml_outfile1_test_.cc
        src/lib/googletest-master/googletest/test/gtest_xml_outfile2_test_.cc
        src/lib/googletest-master/googletest/test/gtest_xml_output_unittest_.cc
        src/lib/googletest-master/googletest/test/production.cc
        src/lib/googletest-master/googletest/test/production.h
        src/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.cc
        src/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget.h
        src/lib/googletest-master/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        src/tests/ardillizarTEST.cpp
        src/tests/elAcaparadorTEST.cpp
        src/tests/encontrarAparicionTEST.cpp
        src/tests/grabacionValidaTEST.cpp
        src/tests/silenciosTEST.cpp
        src/definiciones.h
        src/ejercicios.h
        src/Funciones_TPI.cpp
        src/Funciones_TPI.h
        src/main.cpp
        src/solucion.cpp)

add_executable(salaDeReuniones_TPI ${SOURCE_FILES})